--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tvInfo"
+    style="@style/TextStyleMedium16"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:textColor="@color/metallicSilver"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/dp_16"
+    android:drawablePadding="@dimen/dp_16"
+    android:layout_marginTop="@dimen/dp_16"
+    android:textSize="@dimen/sp_14" />
