--- a/feature/coreui/src/main/res/values/color.xml
+++ b/feature/coreui/src/main/res/values/color.xml
@@ -6,6 +6,7 @@
     <color name="black_transparent_40">#66000000</color>
     <color name="white">#FFFFFF</color>
     <color name="royalBlue">#3364E0</color>
+    <color name="purple">#5669FF</color>
     <color name="metallicSilver">#A5A9B2</color>
     <color name="cultured">#F8F7F5</color>
     <color name="transparent">#00000000</color>
