--- a/feature/coreui/src/main/res/values/dimen.xml
+++ b/feature/coreui/src/main/res/values/dimen.xml
@@ -26,6 +26,7 @@
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_148">148dp</dimen>
 
+    <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_16">16sp</dimen>
     <dimen name="sp_18">18sp</dimen>
